# InceptionEngine

./: .gitattributes  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/AnimEditor/: CMakeLists.txt  MatchingDatabaseBuilder.cpp  MatchingDatabaseBuilder.h  main.cpp
Source/AssetImporter/: CMakeLists.txt  FbxImporter.cpp  FbxImporter.h  main.cpp
Source/InceptionBase/: CMakeLists.txt  PathHelper.cpp  PathHelper.h  Timer.hpp
Source/InceptionBase/EngineBaseGlobals/: EngineBaseApiPrefix.h
Source/InceptionBase/Math/: Math.cpp  Math.h  Spatial.cpp  Spatial.h
Source/InceptionBase/PathHelper/: PathHelper.cpp  PathHelper.h
Source/InceptionBase/Serialization/: Serializer.cpp  Serializer.h
Source/InceptionEngine/: CMakeLists.txt  IE_PCH.h  InceptionEngine.cpp  InceptionEngine.h  Runtime
Source/InceptionEngine/DevelopTemp_fbximport/: FbxImporter.cpp  FbxImporter.h
Source/InceptionEngine/ECS/: ComponentSystemTypeTraits.h  IWorld.h  NativeWorldScript.cpp  NativeWorldScript.h  World.cpp  World.h
Source/InceptionEngine/ECS/Components/: Components.h
Source/InceptionEngine/ECS/Components/AnimationComponent/: AnimNotify.cpp  AnimNotify.h  AnimNotifyState.cpp  AnimNotifyState.h  AnimSpeedRange.cpp  AnimSpeedRange.h  AnimStateMachine.cpp  AnimStateMachine.h  AnimationComponent.cpp  AnimationComponent.h  EventAnimPlaySetting.cpp  EventAnimPlaySetting.h
Source/InceptionEngine/ECS/Components/AudioComponent/: AudioComponent.cpp  AudioComponent.h
Source/InceptionEngine/ECS/Components/CameraComponent/: CameraComponent.cpp  CameraComponent.h
Source/InceptionEngine/ECS/Components/IRenderComponent/: IRenderComponent.cpp  IRenderComponent.h
Source/InceptionEngine/ECS/Components/NativeScriptComponent/: KeyInputTypes.h  NativeScript.cpp  NativeScript.h  NativeScriptComponent.cpp  NativeScriptComponent.h
Source/InceptionEngine/ECS/Components/RigidbodyComponent/: RigidbodyComponent.cpp  RigidbodyComponent.h  SphereTraceResult.h
Source/InceptionEngine/ECS/Components/SkeletalMeshComponent/: SkeletalMeshComponent.cpp  SkeletalMeshComponent.h
Source/InceptionEngine/ECS/Components/SkyboxComponent/: SkyboxComponent.cpp  SkyboxComponent.h
Source/InceptionEngine/ECS/Components/TransformComponent/: TransformComponent.cpp  TransformComponent.h
Source/InceptionEngine/ECS/Entity/: Entity.cpp  Entity.h  EntityComponentPool.hpp  EntityFriend.h  EntityID.h
Source/InceptionEngine/ECS/Systems/: SystemBase.cpp  SystemBase.h  Systems.h
Source/InceptionEngine/ECS/Systems/AnimationSystem/: AnimationSystem.cpp  AnimationSystem.h
Source/InceptionEngine/ECS/Systems/CameraSystem/: CameraSystem.cpp  CameraSystem.h
Source/InceptionEngine/ECS/Systems/NativeScriptSystem/: NativeScriptSystem.cpp  NativeScriptSystem.h
Source/InceptionEngine/ECS/Systems/RigidbodySystem/: RigidbodySystem.cpp  RigidbodySystem.h
Source/InceptionEngine/ECS/Systems/SkeletalMeshRenderSystem/: SkeletalMeshRenderSystem.cpp  SkeletalMeshRenderSystem.h
Source/InceptionEngine/ECS/Systems/SkyboxSystem/: SkyboxSystem.cpp  SkyboxSystem.h
Source/InceptionEngine/ECS/Systems/TransformSystem/: TransformSystem.cpp  TransformSystem.h
Source/InceptionEngine/EngineGlobals/: EngineApiPrefix.h  EngineConcepts.h  RenderGlobals.h
Source/InceptionEngine/RunTime/: KeyInputCallbackRegistry.h
Source/InceptionEngine/RunTime/Animation/: AnimBlender.cpp  AnimBlender.h  AnimInstance.cpp  AnimInstance.h  AnimPose.cpp  AnimPose.h  AnimSpeedBar.cpp  AnimSpeedBar.h  Animation.cpp  Animation.h  AnimationController.cpp  AnimationController.h  EventAnimController.cpp  EventAnimController.h  IkController.cpp  IkController.h  MotionMatching.cpp  MotionMatching.h
Source/InceptionEngine/RunTime/Animation/MotionMatching/: MatchingDatabase.cpp  MatchingDatabase.h  MatchingFeature.cpp  MatchingFeature.h  MotionMatchingController.cpp  MotionMatchingController.h
Source/InceptionEngine/RunTime/Collision/: CapsuleCollider.cpp  CapsuleCollider.h
Source/InceptionEngine/RunTime/Geometry/: GeomGen.cpp  GeomGen.h  GeomProcessing.cpp  GeomProcessing.h
Source/InceptionEngine/RunTime/RHI/Renderer/: IRenderObject.h  Renderer.cpp  Renderer.h  ShaderPath.h  Vertex.h
Source/InceptionEngine/RunTime/RHI/WindowHandler/: PeripheralInput.h  WindowHandler.cpp  WindowHandler.h
Source/InceptionEngine/RunTime/Resource/: ResourceManager.cpp  ResourceManager.h
Source/InceptionEngine/RunTime/Rigidbody/Dynamics/: Joint.cpp  Joint.h  KinematicsTree.cpp  KinematicsTree.h  Rigidbody.cpp  Rigidbody.h
Source/InceptionEngine/RunTime/SkeletalMesh/: SkeletalMesh.cpp  SkeletalMesh.h  SkeletalMeshInstance.cpp  SkeletalMeshInstance.h  Skeleton.cpp  Skeleton.h
Source/InceptionEngine/RunTime/Skybox/: Skybox.h
Source/StandAlone/: CMakeLists.txt  main.cpp
Source/StandAlone/Interfaces/: IHitable.h
Source/StandAlone/Milia/: MiliaASM.h  MiliaScript.h
Source/StandAlone/Shinokao/: ShinokaoASM.h  ShinokaoScript.h
Source/StandAlone/Sice/: SiceASM.h  SiceScript.h
StandAloneResource/cube/: cube_mesh.ie_skmesh  cube_skeleton.ie_skeleton
StandAloneResource/firesword/: firesword_bindpose.ie_anim  firesword_mesh.ie_skmesh  firesword_skeleton.ie_skeleton
StandAloneResource/humanoid/: bonePair.txt  humanoid_mesh.ie_skmesh  humanoid_skeleton.ie_skeleton  obstacles1_subject1.ie_mmdb  walk.ie_mmdb  walk1_3.ie_anim
StandAloneResource/maria/: dance.anim  maria.mesh  maria_dance.ie_anim  maria_mesh.ie_skmesh
StandAloneResource/milia/: milia_bindpose.ie_anim  milia_combo_a1.ie_anim  milia_combo_a2.ie_anim  milia_combo_a3.ie_anim  milia_combo_a4.ie_anim  milia_combo_a5.ie_anim  milia_idle.ie_anim  milia_mesh.ie_skmesh  milia_skeleton.ie_skeleton  milia_walk.ie_anim
StandAloneResource/milia_maya/: milia_a_pose.ie_anim  milia_mesh.ie_skmesh  milia_skeleton.ie_skeleton  milia_walk.ie_anim
StandAloneResource/plane/: plane.ie_skmesh
StandAloneResource/shinokao/: shinokao_attack_1.ie_anim  shinokao_attack_2.ie_anim  shinokao_attack_3.ie_anim  shinokao_attack_4.ie_anim  shinokao_battle_idle.ie_anim  shinokao_beblocked.ie_anim  shinokao_bindpose.ie_anim  shinokao_run.ie_anim  (+3 more)
(+45 files in other folders)
